# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,9 @@ import healthRouter from "./health";
 import productsRouter from "./products";
 import cartRouter from "./cart";
 import ordersRouter from "./orders";
+import paymentsRouter from "./payments";
+import customersRouter from "./customers";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
@@ -10,5 +13,8 @@ router.use(healthRouter);
 router.use(productsRouter);
 router.use(cartRouter);
 router.use(ordersRouter);
+router.use(paymentsRouter);
+router.use(customersRouter);
+router.use(adminRouter);
 
 export default router;
