# lib/db/src/schema/index.ts
@@ -1,3 +1,5 @@
 export * from "./products";
 export * from "./cart";
 export * from "./orders";
+export * from "./customers";
+export * from "./payments";
